# ScrapeFlux

./: .gitignore  Cargo.toml  DEPLOY.md  LICENSE  README.md  pyproject.toml
configs/: agents.yaml  settings.yaml
configs/prompts/: extraction.yaml
deploy/: Dockerfile  docker-compose.yml  requirements.txt
examples/: 01_basic_scraper.py
python/scrapeflux/: __init__.py  crawler.py  extractor.py  http_client.py  scraper.py
python/tests/: test_scrapeflux.py
scrapeflux-frontend/: README.md  package.json
scrapeflux-frontend/src/router/: index.ts
scrapeflux-frontend/src/stores/: auth.ts  subscription.ts
scrapeflux-frontend/src/views/: DashboardView.vue  HomeView.vue  PricingView.vue  ProfileView.vue
scrapeflux-frontend/src/views/admin/: AdminDashboard.vue
scrapeflux-frontend/src/views/auth/: LoginView.vue  RegisterView.vue
src/: advanced_data.rs  ai_agent.rs  browser_automation.rs  cache.rs  crawler.rs  extractor.rs  google_extractor.rs  html.rs  http.rs  lib.rs  llm_engine.rs  main.rs  python.rs  super_crawler.rs  unified.rs  utils.rs
src/auth/: mod.rs  user_auth.rs
