[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scrape-flux"
version = "0.1.0"
description = "Advanced unified web scraping framework combining Rust core with Python API"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Antor Roy", email = "antorroybabu@gmail.com"}
]
keywords = ["web-scraping", "crawling", "extraction", "rust", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/antorroy/scrapeflux"
Documentation = "https://github.com/antorroy/scrapeflux#readme"
Repository = "https://github.com/antorroy/scrapeflux"
Issues = "https://github.com/antorroy/scrapeflux/issues"

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools.package-data]
scrape-flux = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]